--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" />
 
-    <title>Siddhesh More</title>
+    <title>Siddhesh More®</title>
   </head>
   <body>
     <section class="hero_section">
-      <!-- <h1>SiddheshMore</h1> -->
+      <h1 class="hero_title">Fullstack Developer.</h1>
     </section>
 
     <section class="main_wrapper">
@@ -79,11 +82,15 @@
     <h1 class="titleItem">Todoo List</h1>
     <h1 class="titleItem">Color Game</h1>
     <h1 class="titleItem">Android</h1>
+    <p class="pro_title">All Projects</p>
   </div>
 
     </section>
 
     </section>
+
+
+    
 
     <script
       src="https://code.jquery.com/jquery-3.6.4.min.js"
