--- a/index.html
+++ b/index.html
@@ -13,16 +13,18 @@
     <title>Siddhesh More®</title>
   </head>
   <body>
-    <section class="hero_section">
+    
+    <!-- <p class="cursor"></p> -->
+    <section class="hero_section container-fluid">
       <h1 class="hero_title">Fullstack Developer.</h1>
     </section>
 
-    <section class="main_wrapper">
+    <section class="main_wrapper container-fluid">
       <ul>
-        <li>Contact</li>
+        <li><a href="about.html">About</a></li>
         <li class="is--large">SiddheshMore</li>
-        <li style="display: flex; justify-content: end">
-          (2023),ALL RIGHTS RESERVED
+        <li class="rights">
+          Contact
         </li>
       </ul>
 
@@ -31,7 +33,7 @@
         <div class="text_wrap">
           <h1 style="font-style: italic; font-weight: 100">the best in</h1>
         </div>
-        <div class="text_wrap"><h1>minimal</h1></div>
+        <div class="text_wrap"><h1>ideal</h1></div>
         <div class="text_wrap"><h1>design</h1></div>
       </div>
 
@@ -49,38 +51,38 @@
 
     <section class="grid_container">
 
-    <div class="grid--wrapper">
-      <img src="https://i.pinimg.com/originals/74/d0/9e/74d09eea24406ac49fdb4fd2179b9ea1.gif" alt="" srcset="" class="img-1">
-      <img src="https://i.pinimg.com/originals/74/d0/9e/74d09eea24406ac49fdb4fd2179b9ea1.gif" alt="" srcset="" class="img-2">
-      <img src="https://i.pinimg.com/originals/74/d0/9e/74d09eea24406ac49fdb4fd2179b9ea1.gif" alt="" srcset="" class="img-3">
-      <img src="https://i.pinimg.com/originals/74/d0/9e/74d09eea24406ac49fdb4fd2179b9ea1.gif" alt="" srcset="" class="img-4">
+    <div class="grid--wrapper row">
+      <img src="https://i.pinimg.com/originals/74/d0/9e/74d09eea24406ac49fdb4fd2179b9ea1.gif" alt="" srcset="" class="img-1 col-12 col-md-6 col-lg-4">
+      <img src="https://i.pinimg.com/originals/74/d0/9e/74d09eea24406ac49fdb4fd2179b9ea1.gif" alt="" srcset="" class="img-2 col-12 col-md-6 col-lg-4">
+      <img src="https://i.pinimg.com/originals/74/d0/9e/74d09eea24406ac49fdb4fd2179b9ea1.gif" alt="" srcset="" class="img-3 col-12 col-md-6 col-lg-4">
+      <img src="https://i.pinimg.com/originals/74/d0/9e/74d09eea24406ac49fdb4fd2179b9ea1.gif" alt="" srcset="" class="img-4 col-12 col-md-6 col-lg-4">
     </div>
 
-    <div class="grid--wrapper">
-      <img src="https://i.pinimg.com/originals/74/d0/9e/74d09eea24406ac49fdb4fd2179b9ea1.gif" alt="" srcset="" class="img-1">
-      <img src="https://i.pinimg.com/originals/74/d0/9e/74d09eea24406ac49fdb4fd2179b9ea1.gif" alt="" srcset="" class="img-2">
-      <img src="https://i.pinimg.com/originals/74/d0/9e/74d09eea24406ac49fdb4fd2179b9ea1.gif" alt="" srcset="" class="img-3">
-      <img src="https://i.pinimg.com/originals/74/d0/9e/74d09eea24406ac49fdb4fd2179b9ea1.gif" alt="" srcset="" class="img-4">
+    <div class="grid--wrapper row">
+      <img src="https://i.pinimg.com/originals/74/d0/9e/74d09eea24406ac49fdb4fd2179b9ea1.gif" alt="" srcset="" class="img-1 col-12 col-md-6 col-lg-4">
+      <img src="https://i.pinimg.com/originals/74/d0/9e/74d09eea24406ac49fdb4fd2179b9ea1.gif" alt="" srcset="" class="img-2 col-12 col-md-6 col-lg-4">
+      <img src="https://i.pinimg.com/originals/74/d0/9e/74d09eea24406ac49fdb4fd2179b9ea1.gif" alt="" srcset="" class="img-3 col-12 col-md-6 col-lg-4">
+      <img src="https://i.pinimg.com/originals/74/d0/9e/74d09eea24406ac49fdb4fd2179b9ea1.gif" alt="" srcset="" class="img-4 col-12 col-md-6 col-lg-4">
     </div>
 
-    <div class="grid--wrapper">
-      <img src="https://i.pinimg.com/originals/74/d0/9e/74d09eea24406ac49fdb4fd2179b9ea1.gif" alt="" srcset="" class="img-1">
-      <img src="https://i.pinimg.com/originals/74/d0/9e/74d09eea24406ac49fdb4fd2179b9ea1.gif" alt="" srcset="" class="img-2">
-      <img src="https://i.pinimg.com/originals/74/d0/9e/74d09eea24406ac49fdb4fd2179b9ea1.gif" alt="" srcset="" class="img-3">
-      <img src="https://i.pinimg.com/originals/74/d0/9e/74d09eea24406ac49fdb4fd2179b9ea1.gif" alt="" srcset="" class="img-4">
+    <div class="grid--wrapper row">
+      <img src="https://i.pinimg.com/originals/74/d0/9e/74d09eea24406ac49fdb4fd2179b9ea1.gif" alt="" srcset="" class="img-1 col-12 col-md-6 col-lg-4">
+      <img src="https://i.pinimg.com/originals/74/d0/9e/74d09eea24406ac49fdb4fd2179b9ea1.gif" alt="" srcset="" class="img-2 col-12 col-md-6 col-lg-4">
+      <img src="https://i.pinimg.com/originals/74/d0/9e/74d09eea24406ac49fdb4fd2179b9ea1.gif" alt="" srcset="" class="img-3 col-12 col-md-6 col-lg-4">
+      <img src="https://i.pinimg.com/originals/74/d0/9e/74d09eea24406ac49fdb4fd2179b9ea1.gif" alt="" srcset="" class="img-4 col-12 col-md-6 col-lg-4">
     </div>
 
-    <div class="grid--wrapper">
-      <img src="https://i.pinimg.com/originals/74/d0/9e/74d09eea24406ac49fdb4fd2179b9ea1.gif" alt="" srcset="" class="img-1">
-      <img src="https://i.pinimg.com/originals/74/d0/9e/74d09eea24406ac49fdb4fd2179b9ea1.gif" alt="" srcset="" class="img-2">
-      <img src="https://i.pinimg.com/originals/74/d0/9e/74d09eea24406ac49fdb4fd2179b9ea1.gif" alt="" srcset="" class="img-3">
-      <img src="https://i.pinimg.com/originals/74/d0/9e/74d09eea24406ac49fdb4fd2179b9ea1.gif" alt="" srcset="" class="img-4">
+    <div class="grid--wrapper row">
+      <img src="https://i.pinimg.com/originals/74/d0/9e/74d09eea24406ac49fdb4fd2179b9ea1.gif" alt="" srcset="" class="img-1 col-12 col-md-6 col-lg-4">
+      <img src="https://i.pinimg.com/originals/74/d0/9e/74d09eea24406ac49fdb4fd2179b9ea1.gif" alt="" srcset="" class="img-2 col-12 col-md-6 col-lg-4">
+      <img src="https://i.pinimg.com/originals/74/d0/9e/74d09eea24406ac49fdb4fd2179b9ea1.gif" alt="" srcset="" class="img-3 col-12 col-md-6 col-lg-4">
+      <img src="https://i.pinimg.com/originals/74/d0/9e/74d09eea24406ac49fdb4fd2179b9ea1.gif" alt="" srcset="" class="img-4 col-12 col-md-6 col-lg-4">
     </div>
 
     <div class="title-list">
     <h1 class="titleItem ">Pokedex</h1>
-    <h1 class="titleItem">Todoo List</h1>
-    <h1 class="titleItem">Color Game</h1>
+    <h1 class="titleItem">Todoo </h1>
+    <h1 class="titleItem">Color</h1>
     <h1 class="titleItem">Android</h1>
     <p class="pro_title">All Projects</p>
   </div>
