--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="text_wrap">
           <h1 style="font-style: italic; font-weight: 100">the best in</h1>
         </div>
-        <div class="text_wrap"><h1>ideal</h1></div>
+        <div class="text_wrap"><h1>minimal</h1></div>
         <div class="text_wrap"><h1>design</h1></div>
       </div>
 
