--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
         padding: 1rem;
         width: 50%;
         height: auto;
-        background-color: #000;
+        background-color: #201d1c;
         color: #e7e1d9;
         font-family: "Righteous", cursive;
         display: flex;
@@ -75,7 +75,7 @@
         align-items: center;
       }
       .about_title p {
-        color: #000;
+        color: #201d1c;
         transform: rotateZ(270deg);
         font-size: 17rem;
         font-weight: 400;
