--- a/about.html
+++ b/about.html
@@ -82,18 +82,6 @@
         font-family: "Righteous", cursive;
       }
 
-      .cursor {
-        z-index: 5;
-        position: fixed;
-        width: 20px;
-        height: 20px;
-        border-radius: 50%;
-        background: #fff;
-        transition: 0.1s;
-        transform: translate(-50%, -50%);
-        pointer-events: none;
-        mix-blend-mode: difference;
-      }
 
       
 
@@ -102,7 +90,9 @@
     <title>About</title>
   </head>
   <body style="background-color: #e7e1d9; color: #2e2a27">
-    <p class="cursor"></p>
+    
+<div class="cursor"></div>
+<div class="cursor2"></div>
 
     <section class="main_wrapper container-fluid">
       <ul style="background-color: #e7e1d9">
@@ -182,15 +172,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/ScrollTrigger.min.js"></script>
     <script src="script.js"></script>
-
-    <script>
-      // ===[ Corsor ]===
-
-      const cursor = document.querySelector(".cursor");
-      document.addEventListener("mousemove", (e) => {
-        cursor.style.left = e.pageX + "px";
-        cursor.style.top = e.pageY + "px";
-      });
-    </script>
   </body>
 </html>
