--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   </head>
   <body>
     
-    <!-- <p class="cursor"></p> -->
+<div class="cursor"></div>
+<div class="cursor2"></div>
+
     <section class="hero_section container-fluid">
       <h1 class="hero_title">Fullstack Developer.</h1>
     </section>
@@ -33,7 +35,7 @@
         <div class="text_wrap">
           <h1 style="font-style: italic; font-weight: 100">the best in</h1>
         </div>
-        <div class="text_wrap"><h1>minimal</h1></div>
+        <div class="text_wrap"><h1>ideal</h1></div>
         <div class="text_wrap"><h1>design</h1></div>
       </div>
 
