--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" type="image/x-icon" href="images/favicon-32x32.png">
 
     <title>Siddhesh More®</title>
   </head>
@@ -28,7 +29,7 @@
     <section class="main_wrapper container-fluid">
       <ul>
         <a href="about.html">About</a>
-        <li class="is--large"><a href="index.html">SiddheshMore</a></li>
+        <li class="is--large"><a href="/">SiddheshMore</a></li>
         <li class="rights"><a href="contact.html">Contact</a></li>
       </ul>
 
