--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 
 
         <div class="title-list">
-          <h1 class="titleItem">Coin Flip</h1>
+          <h1 class="titleItem">Coi Flip</h1>
           <h1 class="titleItem">Dice Game</h1>
           <h1 class="titleItem">Color Box</h1>
           <h1 class="titleItem">Lotto Lottery</h1>
